[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datahub-reflex"
version = "0.1.0"
description = "Convert resolved DataHub incidents into backtested, executable preventive controls propagated through the DataHub graph"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "DataHub Reflex Contributors"},
]
keywords = ["datahub", "data-quality", "incident-management", "observability", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "pydantic>=2.0",
    "acryl-datahub>=0.14.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "typer>=0.12.0",
    "rich>=13.0",
    "flask>=3.0",
    "gunicorn>=22.0; platform_system != 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[project.scripts]
reflex = "reflex.cli:app"
reflex-ui = "ui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["reflex*"]

[tool.pytest.ini_options]
testpaths = ["tests", "spikes"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "requires_datahub: tests that require a running DataHub OSS instance",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
